<resources>
    <string name="app_name">My Application</string>
    <string name="b_signIn">Sign in</string>
    <string name="authorization">Authorization</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create Account</string>
    <string name="save">save</string>
    <string name="textView">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>